# turner-strategic

./: .gitignore  .prettierignore  CHANGELOG.md  CURRENT_STATE.md  DECISION_REGISTER.md  PARKING_LOT.md  README.md  ROADMAP.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/reading-room/: eslint.config.js  next.config.ts  package.json  tsconfig.json
apps/reading-room/app/: globals.css  layout.tsx  page.tsx
apps/reading-room/app/_components/: ArticleSection.tsx  BulletPanel.tsx  Greeting.tsx  Header.tsx  InstitutionScorecard.tsx  LeftNav.tsx  PublicationHeader.tsx  ReaderShell.tsx  TableOfContents.tsx  tableOfContents.data.ts
design/: README.md
docs/: DEVELOPMENT.md  README.md
institution/: README.md
institution/glossary/: institution_terms.md
memory/: README.md
specifications/: README.md
